--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Ha0&#39;s by ihaolin</title>
+    <title>Ha0&#39;s Home</title>
   </head>
 
   <body>
