add semantic support

--- a/_posts/2014-12-30-java-dynamic.html
+++ b/_posts/2014-12-30-java-dynamic.html
@@ -1,10 +1,11 @@
 ---
 title : Java动态代理原理
 category : [java]
+tags : [java, aop]
 layout : java
 ---
 
-# {{page.title}}
+<h2>{{page.title}}</h2>
 
 {% highlight java %}
 
