--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@ title : Ha0's home
 ---
 
 <ul>
-　　{% for post in site.posts %}
-　　　　<li>{{ post.date | date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
-　　{% endfor %}
+    {% for post in paginator.posts %}
+        <li> <a href="{{post.url}}">{{ post.title }}</a></li>
+    {% endfor %}
 </ul>
 
+{% include pagination.html %}
