--- a/_posts/2015-01-14-gulp-build.html
+++ b/_posts/2015-01-14-gulp-build.html
@@ -3,6 +3,7 @@ title : 使用gulp进行web前端构建
 category : [java]
 tags : [web, gulp]
 layout : web
+show : 1
 ---
 
 今天研究了一个web前端构建工具: <a href="http://gulpjs.com/" target="_blank">Gulp</a>，相比之前接触过的Grunt，确实要简洁好用一些的,
