--- a/_posts/2015-01-28-drools.html
+++ b/_posts/2015-01-28-drools.html
@@ -27,7 +27,7 @@ show : 1
 
 <div class="content">
     <ul>
-        <li>这两天, 也了解了下规则引擎相关的东西, 接触了下Java中的一门规则引擎<a href="" target="_blank">Drools</a>, 似乎看到了一丝希望:</li>
+        <li>这两天, 也了解了下规则引擎相关的东西, 接触了下Java中的一门规则引擎<a href="http://docs.jboss.org/drools/release/5.2.0.Final/drools-expert-docs/html/ch01.html" target="_blank">Drools</a>, 似乎看到了一丝希望:</li>
         <p>
             (未完...)
         </p>
