--- a/_posts/2015-01-28-drools.html
+++ b/_posts/2015-01-28-drools.html
@@ -153,7 +153,13 @@ ksession.dispose();
 结果也正如规则中的描述一样:<br />
     <img src="{{site.url}}/images/drools.jpg" />
         </p>
-    <li>未完...</li>
+    <li>除了营销业务, 交易等业务也有可能出现这种问题 </li>
+    <p>
+        比如不同类目的商品可能会有不同的交易流程, 普通商品基本在线支付交易流程大概就是:<br />
+        买家创建订单-->买家支付-->卖家发货-->买家确认收货<br />
+        但其他类目商品, 如保险, 汽车等, 可能需要先付定金, 再付尾款等, <br />
+        所以交易流程也有必要规则化。
+    </p>
     </ul>
 </div>
 
