--- a/_posts/2015-01-23-nginx-gzip.html
+++ b/_posts/2015-01-23-nginx-gzip.html
@@ -1,8 +1,8 @@
 ---
 title : Nginx压缩Web资源文件
-category : [server]
+category : [nginx]
 tags : [server, nginx, gzip]
-layout : server
+layout : nginx
 show : 1
 ---
 
