--- a/_posts/2015-01-22-maven.html
+++ b/_posts/2015-01-22-maven.html
@@ -11,7 +11,7 @@ show : 1
 
 <div class="content">
     <ul>
-        <li><strong>基础</strong>: Maven基于XML进行配置, 其配置文件叫pom.xml, 如:</li>
+        <li><h3>基础: Maven基于XML进行配置, 其配置文件叫pom.xml, 如</h3></li>
         <p>
             {% highlight xml %}
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -40,7 +40,7 @@ show : 1
 </project>
             {% endhighlight %}
         </p>
-        <li><strong>多模块开发</strong>: 通常我们的项目都会有多个模块, 合理地拆分模块, 也会使得我们的项目更清晰, 更容易维护, 甚至使得模块间的依赖关系更简单, 如:</li>
+        <li><h3>多模块开发: 通常我们的项目都会有多个模块, 合理地拆分模块, 也会使得我们的项目更清晰, 更容易维护, 甚至使得模块间的依赖关系更简单, 如</h3></li>
         <p>
             <img src="{{site.url}}/images/maven1.jpg">
             <ul>
@@ -141,7 +141,7 @@ show : 1
                 </p>
             </ul>
         </p>
-        <li><strong>不同环境切换</strong>: 项目开发中, 我们可能会有很多不同的环境配置, 如DB源, 服务器host等, 我们不可能每次发布都去手动更改配置, 这既繁琐又容易出错, 那基于Maven我们怎么优雅地来切换不同环境呢?</li>
+        <li><h3>不同环境切换: 项目开发中, 我们可能会有很多不同的环境配置, 如DB源, 服务器host等, 我们不可能每次发布都去手动更改配置, 这既繁琐又容易出错, 那基于Maven我们怎么优雅地来切换不同环境呢?</h3></li>
         <p>
         如上面所说, Maven可通过profile机制和filtering机制实现环境切换, 如:
         {% highlight xml%}
@@ -186,14 +186,17 @@ show : 1
         <img src="{{site.url}}/images/maven2.jpg"> <br />
         {% highlight properties %}
 # dev.properties
+env=dev
 props.one=123
 props.two=456
 
 # test.properties:
+env=test
 props.one=123abc
 props.two=456abc
 
 # app.properties:
+env=${env}
 props.one=${props.one}
 props.two=${props.two}
         {% endhighlight %}
@@ -203,6 +206,53 @@ mvn clean package -Pdev
 mvn clean package -Ptest
         {% endhighlight %}
         通过这种方式我们就可以灵活的切换不同的环境, 甚至可以在不同的环境切换不同的实现等。
+        </p>
+        <li><h3>结合Spring上下文, 使Spring感知到当前环境</h3></li>
+        <p>
+            既然我们已经能通过maven编译打包不同的环境配置了, 那要怎么告知Spring当前是什么环境呢?
+            {% highlight java %}
+// Spring ApplicationContext对象中有一个环境配置属性:
+/** Environment used by this context; initialized by {@link #createEnvironment()} */
+private ConfigurableEnvironment environment;
+
+// 该环境配置对象通过属性spring.profiles.active来进行环境配置
+/**
+* Name of property to set to specify active profiles: {@value}. Value may be comma
+* delimited.
+* <p>Note that certain shell environments such as Bash disallow the use of the period
+* character in variable names. Assuming that Spring's {@link SystemEnvironmentPropertySource}
+* is in use, this property may be specified as an environment variable as
+* {@code SPRING_PROFILES_ACTIVE}.
+* @see ConfigurableEnvironment#setActiveProfiles
+*/
+public static final String ACTIVE_PROFILES_PROPERTY_NAME = "spring.profiles.active";
+{% endhighlight %}
+{% highlight xml %}
+<!--若对于Web应用, 我们当然可以在初始化Spring根容器时指定该属性值, 即在web.xml中指定:-->
+<context-param>
+    <param-name>spring.profiles.active</param-name>
+    <param-value>${env}</param-value> <!-- 该值会在maven打包时替换掉 -->
+</context-param>
+
+<!-- Spring Root Context -->
+<listener>
+    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+</listener>
+            {% endhighlight %}
+            {% highlight java %}
+// 当然, 你也可以通过Java系统属性来设置
+System.setProperty("spring.profiles.active", "dev");
+            {% endhighlight %}
+            {% highlight xml %}
+<!--于是你就可以在Spring的配置文件里, 在不同的环境中匹配不同的配置了-->
+<beans profile="dev, test">
+    ...
+</beans>
+
+<beans profile="prod">
+    ...
+</beans>
+            {% endhighlight %}
         </p>
         <li>如今, 除了Maven外, 有了更加灵活强大的构建工具<a href="http://www.gradle.org/documentation" target="_blank">Gradle</a>, Spring已经采用了其进行构建, 其通过Groovy动态语言及编程式构建项目, 不妨也可以实践实践。</li>
     </ul>
