--- a/_posts/2015-02-11-ps-script.html
+++ b/_posts/2015-02-11-ps-script.html
@@ -28,10 +28,10 @@ show : 1
     <img src="{{site.url}}/images/ps2.jpg"><br />
     <li><h2>PhotoShop DOM结构</h2></li>
     <p>
-        于是选择了亲切些的Javascript。PhotoShop DOM结构很类似于HTML的DOM结构, 理解起来也比较容易
+        PhotoShop DOM结构很类似于HTML的DOM结构, 理解起来也比较容易
     </p>
     <img src="{{site.url}}/images/ps_dom.png">
-    <li><h2>脚本编写</h2></li>
+    <li><h2>脚本编写(JavaScript)</h2></li>
     <p>现在把主要的工作分成: 擦除需要修改的区域和填写对应的文本到擦除区域, 于是写了这两个这样的函数</p>
         {% highlight javascript %}
 // 当前选中的文档
