--- a/_posts/2015-02-10-js-inherit.html
+++ b/_posts/2015-02-10-js-inherit.html
@@ -97,7 +97,7 @@ var person = function(context){
 
 var p2 = person({"name" : "haolin", "age" : 24});
     {% endhighlight %}
-    <li>之前通过伪类进行继承, 我们需要重复构造器Person已经完成的工作, 而通过函数化构造则不用关心父类构造, 只需条用父类构造即可</li>
+    <li>之前通过伪类进行继承, 我们需要重复构造器Person已经完成的工作, 而通过函数化构造则不用关心父类构造, 只需调用父类构造即可</li>
     {% highlight javascript %}
 var student = function(context){
 
