--- a/_posts/2015-02-18-arch-more.html
+++ b/_posts/2015-02-18-arch-more.html
@@ -9,7 +9,7 @@ keywords: web, 架构
 
     <ul>
         <p class="intro">
-            我相信每一个工程师心中都会有自己心中的架构之路，无论你从事过什么样的产品项目开发，系统总是会有自己的架构，
+            我相信每一个工程师都会有自己心中的架构之路，无论你从事过什么样的产品项目开发，系统总是会有自己的架构，
             在产品生命周期过程中，架构也是会随之慢慢演进，改善的，而不可能一步到位，特此用一篇文章来记录自己所感，
             可能有些凌乱，但会慢慢改进。
         </p>
