--- a/_posts/zk/2015-02-28-zk-basic.html
+++ b/_posts/zk/2015-02-28-zk-basic.html
@@ -22,7 +22,7 @@ keywords: zookeeper, 概念, 基础
     <li>
         网上比较完整统一的资料不是很多，很多文章感觉也说得不是很清楚，或者版式体验真不太好。
         主要就找到两本书籍，一本<a href="{{site.url}}/files/zookeeper.pdf" target="_blank">英文</a>，一本才出不久的<a href="http://item.jd.com/11622772.html" target="_blank">中文</a>，
-        第二本还在路上，就先用第一本过过瘾。这本英文书主要就三个部分，所以希望能用三篇文章来记录，还有个地方就是<a href="http://zookeeper.apache.org/doc/trunk/index.html" target="_blank">官网</a>。
+        第二本还在路上，就先用第一本过过瘾。这本英文书主要就三个部分，所以希望能用几篇文章来记录，还有个地方就是<a href="http://zookeeper.apache.org/doc/trunk/index.html" target="_blank">官网</a>。
     </li>
     <img src="{{site.url}}/images/zk/zk2.jpg"/><img src="{{site.url}}/images/zk/zk1.jpg"/>
     <li>
