--- a/_posts/zk/2015-04-25-zk-admin-running.html
+++ b/_posts/zk/2015-04-25-zk-admin-running.html
@@ -607,4 +607,7 @@ admin <password>
     <p class="wrap">
         日志可视化。
     </p>
+    <li>
+        这些工具都可以在<a href="https://github.com/naterator/zookeeper/tree/master/src/contrib" target="_blank">Github</a>上有具体的使用方法。
+    </li>
 </ul>
