link to Searcher

--- a/_posts/es/2015-06-27-es-first.html
+++ b/_posts/es/2015-06-27-es-first.html
@@ -253,7 +253,7 @@ unset REST_URL
 
     {% endhighlight %}
     <li>
-        初探到此为止。
+        此外封装了一个简明的<a href="https://github.com/ihaolin/men/blob/master/searchman/client/src/main/java/org/h0/men/searchman/client/Searcher.java" target="_blank">Java客户端工具</a>，初探到此为止。
     </li>
 </ul>
 
