--- a/_posts/es/2015-06-27-es-first.html
+++ b/_posts/es/2015-06-27-es-first.html
@@ -1,5 +1,5 @@
 ---
-title : ElasticSearch深入理解(一)：初探
+title : ElasticSearch初探
 category : [elasticsearch]
 tags : [elasticsearch, install, elasticsearch]
 layout : post
